tests/constructor/missing_args.rev
struct Foo {
    fn init(a, b) {}
}

var foo = Foo(1) // error: wrong arguments number, expected 2 but got 1